@@ -71,6 +71,7 @@ class News_Google(object):
         self.m_feed = None
         self.m_url = None
         self.m_quote = None
+
         self.m_baseurl = "http://news.google.fr/news?hl=%s&ie=UTF-8&output=rss&q=%s&scoring=d"
 
     # ---[ protected interface ] ---
